# Kugify

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-image.yaml  check.yaml  ci-cd.yaml  ci.yaml
alembic/: env.py
app/: database.py  main.py
app/models/: users.py
app/routes/: users.py
charts/kugify/: Chart.yaml  values.yaml
charts/kugify/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
charts/kugify/templates/tests/: test-connection.yaml
