[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kugify"
version = "0.1.0"
description = "FastAPI backend for Kugify"
authors = [
  { name = "Vlad", email = "vladys.amigo97@gmail.com" }
]
requires-python = ">=3.11"

# ── Production dependencies ────────────────────────────────────
dependencies = [
  "fastapi[standard]",
  "uvicorn[standard]",
  "sqlalchemy",
  "asyncpg",
  "python-dotenv",
  "email-validator",
  "sqlmodel",
]

[project.optional-dependencies]
# ── Development dependencies ───────────────────────────────────
dev = [
  "alembic",
  "black",
  "isort",
  "ruff",
  "mypy",
  "pytest",
  "httpx",
  "watchfiles",
]

# ── Explicit package discovery for setuptools ───────────────────
# См. setuptools docs: https://setuptools.pypa.io/en/latest/userguide/packaging.html#using-find
[tool.setuptools.packages]
find = { where = ["."], include = ["app*", "alembic*"] }

# ── Tool configuration ───────────────────────────────────────────

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
